--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
