--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "travel-tide-version-2.0-client",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.26.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "serve": "^14.2.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12"
@@ -41,6 +43,5 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
-  },
-  "homepage": "."
+  }
 }
